@@ -1,3 +1,9 @@
+2002-01-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-rfilter (envelope_recipient): We no longer look for an
+	X-*-Originally-To header by default.  Instead, we look for the
+	header contained in RECIPIENT_HEADER if it's set by the user.
+
 2002-01-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-rfilter (list_headers): Add `Mailing-List' to the list of
