@@ -1,3 +1,9 @@
+2002-01-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (RECIPIENT_HEADER): New variable specifying the
+	header whose contents will be taken as the envelope recipient of
+	the message.
+
 2002-01-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* FilterParser.py (FilterParser.firstmatch): Add support for
